--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     implementation 'org.antlr:antlr4:4.9.2'
     implementation 'net.sourceforge.owlapi:owlapi-distribution:4.1.4'
+    implementation 'org.slf4j:slf4j-api:*'
+
+    runtimeOnly 'org.slf4j:slf4j-jdk14:2.0.6'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
