--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     implementation 'org.antlr:antlr4:4.9.2'
     implementation 'net.sourceforge.owlapi:owlapi-distribution:4.1.4'
+    implementation 'org.apache.jena:apache-jena-libs:4.8.0'
     implementation 'org.slf4j:slf4j-api:*'
 
     runtimeOnly 'org.slf4j:slf4j-jdk14:2.0.6'
